    thread-unsafe. (benoyantony viat tucu)

    HADOOP-10881. Clarify usage of encryption and encrypted encryption
    key in KeyProviderCryptoExtension. (wang)

    HADOOP-10920. site plugin couldn't parse hadoop-kms index.apt.vm.
    (Akira Ajisaka via wang)

    HADOOP-10925. Compilation fails in native link0 function on Windows.
    (cnauroth)

  OPTIMIZATIONS

    HADOOP-7761. Improve the performance of raw comparisons. (todd)

    HADOOP-8589. ViewFs tests fail when tests and home dirs are nested (sanjay Radia)

Release 2.6.0 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-10808. Remove unused native code for munlock. (cnauroth)

    HADOOP-10815. Implement Windows equivalent of mlock. (cnauroth)

    HADOOP-7664. Remove warmings when overriding final parameter configuration
    if the override value is same as the final parameter value.
    (Ravi Prakash via suresh)

    HADOOP-10673. Update rpc metrics when the call throws an exception. (Ming Ma
    via jing9)

    HADOOP-10845. Add common tests for ACLs in combination with viewfs.
    (Stephen Chu via cnauroth)

    HADOOP-10839. Add unregisterSource() to MetricsSystem API.
    (Shanyu Zhao via cnauroth)

    HADOOP-10607. Create an API to separate credentials/password storage
    from applications (Larry McCay via omalley)

    HADOOP-10732. Fix locking in credential update. (Ted Yu via omalley)

    HADOOP-10733. Fix potential null dereference in CredShell. (Ted Yu via
    omalley)

    HADOOP-10610. Upgrade S3n s3.fs.buffer.dir to support multi directories.
    (Ted Malaska via atm)

    HADOOP-10817. ProxyUsers configuration should support configurable 
    prefixes. (tucu)

    HADOOP-10755. Support negative caching of user-group mapping.
    (Lei Xu via wang)

    HADOOP-10855. Allow Text to be read with a known Length. (todd)

    HADOOP-10887. Add XAttrs to ViewFs and make XAttrs + ViewFileSystem
    internal dir behavior consistent. (Stephen Chu via wang)
